# pdf-without-tears

./: README.md  REQUIREMENTS.md  index.html  package.json  pnpm-lock.yaml
scripts/: sync-pdfjs-assets.mjs
src/: App.module.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/BookCard/: BookCard.module.css  BookCard.tsx
src/components/BookContextMenu/: BookContextMenu.module.css  BookContextMenu.tsx
src/components/BookDetailDialog/: BookDetailDialog.module.css  BookDetailDialog.tsx
src/components/ConfirmDialog/: ConfirmDialog.module.css  ConfirmDialog.tsx
src/components/FilterBar/: FilterBar.module.css  FilterBar.tsx
src/components/LibraryToolbar/: LibraryToolbar.module.css  LibraryToolbar.tsx
src/components/LibraryView/: LibraryView.module.css  LibraryView.tsx
src/components/PdfViewer/: PdfViewer.module.css  PdfViewer.tsx
src/components/SettingsDialog/: SettingsDialog.module.css  SettingsDialog.tsx
src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
src/components/StatusBar/: StatusBar.module.css  StatusBar.tsx
src/components/TocPanel/: TocPanel.module.css  TocPanel.tsx
src/components/Toolbar/: Toolbar.module.css  Toolbar.tsx
src/components/WelcomeScreen/: WelcomeScreen.module.css  WelcomeScreen.tsx
src/types/: book.ts  toc.ts
src/utils/: aiTocGenerator.ts  batchImport.ts  db.ts  metadata.ts  pdfRenderer.ts  pdfSetup.ts  search.ts  thumbnailGenerator.ts  tocExtractor.ts  tocWriter.ts
